Adjusted postioning after fixing alignment

--- a/personal-website.css
+++ b/personal-website.css
@@ -97,8 +97,8 @@ a {
 
 
 @media (min-width: 425px) {
-    #navbar-header {
-        margin-left: 80px;
+    #header {
+        margin-left: 50px;
 
     }
 
@@ -106,9 +106,9 @@ a {
         text-align: center;
     }
 
-    #headBgText {
+    #intro-header{
         margin-right: 10px ;
-        font-size: 55px;
+        font-size: 75px;
 
     }
 
@@ -126,9 +126,15 @@ a {
 
 
 @media (min-width: 768px) {
-    #navbar-header {
+    #header {
         margin-top: 65px;
-        margin-left: 150px;
+        margin-left: 120px;
+    }
+
+    #intro-header{
+        margin-right: 10px ;
+        font-size: 90px;
+
     }
 
 }
@@ -148,8 +154,8 @@ a {
 
 
 
-    #navbar-header{
-        margin-left: 280px;
+    #header{
+        margin-left: 180px;
 
 
     }
@@ -160,9 +166,7 @@ a {
 }
 
 
-#headBgText{
-    font-size: 90px;
-}
+
 
 
 
@@ -173,13 +177,14 @@ a {
 
 
 @media (min-width: 1440px) {
-    #navbar-header {
+
+    #header {
 
         margin-left: 150px;
 
 }
 
-    #headBgText{
+    #intro-header{
         font-size: 110px;
     }
 
@@ -188,12 +193,8 @@ a {
 @media (min-width: 2560px) {
 
 
-
-    #navbar-header {
-    }
-
-    #headBgText {
-        font-size: 160px;
+    #intro-header {
+        font-size: 140px;
     }
     #title{
         font-size: 40px;
